Logo squish fix

--- a/assets/base.css
+++ b/assets/base.css
@@ -1719,8 +1719,8 @@ input[type='checkbox'] {
 
 @media screen and (max-width: 991px) {
   .header__heading-logo {
-    width: 50%;
-    height: 100%;
+    max-height: 70px;
+    width: auto;
     margin: auto;
   }
   .header__heading-link .h2 {
